Adjust 'about me' section text and header to correct spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,13 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: "Montserrat",sans-serif;
 }
 
 section {
     height: 100vh;
     display: flex;
-    border: 2px solid white;
+    border-bottom: 15px solid #0e84ab;
     
 }
 
@@ -26,15 +26,15 @@ section {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 25px;
-    color: black;
-    background: white;
+    color: white;
+    background: #2c2c2c;
     text-decoration: none;
 
 }
 
 header {
     display: flex;
-    background-color: white;
+    background-color: #2c2c2c;
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
@@ -60,7 +60,7 @@ header {
     transition: all 0.3s ease 0s;
 }
 
-.nav_links, .nav_list a:hover {
+.nav_links, .nav_list, a:hover {
     color: #0088a0;
 }
 
@@ -84,23 +84,35 @@ button:hover {
     background-color: #cccccc;
     background-image: url(../images/space-hero.png);
     background-repeat: no-repeat;
-    height: 719px
+    height: 719px;
     width: 100%;
     background-position: center;
     background-size: cover;
 }
 
+/* About Me section */
+
 .aboutme-section {
-    background: white;
-    border: 2px solid black;
+    background: #2c2c2c;
 }
 
 .aboutme-header {
+    color: white;
+    font-size: 32px;
     border: 2px solid black;
-    margin-left: 20vw
-    ;
+    padding-left: 150px;
+    padding-right: 10px;
+    width: 100px;
+    border-right: white 3px solid;
 }
 
+.aboutme-text {
+    padding-left: 10px;
+    font-size: 16px;
+    color: white;
+}
+
+/* Work section */
 .three {
     background: white ;
     border: 2px solid black;
